--- a/style.css
+++ b/style.css
@@ -51,14 +51,48 @@ img {
     padding-right: 25px;
     display: inline;
 }
+
 a {
     text-decoration: none;
 }
-#hobby {
-    background-color: white;
+
+#players {
+    background-color: dodgerblue;
+    width: 100%;
+    height: 300px;
+    text-align: center;
+    margin-left: 0px;
+    margin-right: 0px;
+}
+
+#players h1 {
+    margin-top: 30px;
+}
+
+#inspiration {
+    background-color: dodgerblue;
     width: 100%;
     height: 800px;
     text-align: center;
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-top: 30px;
+    margin-left: 0px;
+    margin-right: 0px;
+}
+
+#inspiration h1 {
+    margin-top: 60px;
+}
+#writings {
+    height: 100px;
+    background-color: greenyellow;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+    margin-left: 0px;
+    margin-right: 0px;
+}
+
+
+#writings h1 {
+    margin-top: 30px;
 }
