--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ img {
     height: 300px;
     border-radius: 100%;
     margin-top: 50px;
+
 }
 
 .line {
@@ -82,6 +83,7 @@ a {
 #inspiration h1 {
     margin-top: 60px;
 }
+
 #writings {
     height: 100px;
     background-color: greenyellow;
@@ -95,4 +97,9 @@ a {
 
 #writings h1 {
     margin-top: 30px;
+}
+
+#inspiration1 img:hover {
+    transition: transform .2s;
+    transform: scale(0.9);
 }
